feat(renderer): improve RendererWorkingSet synchronization in commit operations